HelloUltraviolet/Fixtures/RejectedSource/Expressions/WaitNonHandle/Expected.uv
//! Expected diagnostic metadata for the WaitNonHandle rejected-source specimen.

expectedDiagnostic("E-CON-0132", "rule.21.Wait-Handle-Err")
